1.8.0/_sources/examples_built/reconstruction/reconst_msdki.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples_built/reconstruction/reconst_msdki.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_built_reconstruction_reconst_msdki.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_built_reconstruction_reconst_msdki.py:


==============================================
Mean signal diffusion kurtosis imaging (MSDKI)
==============================================

Diffusion Kurtosis Imaging (DKI) is one of the conventional ways to estimate
the degree of non-Gaussian diffusion
(see :ref:`sphx_glr_examples_built_reconstruction_reconst_dki.py`)
[Jensen2005]_. However, a limitation of DKI is that its measures are highly
sensitive to noise and image artefacts. For instance, due to the low radial
diffusivities, standard kurtosis estimates in regions of well-aligned voxel may
be corrupted by implausible low or even negative values.

A way to overcome this issue is to characterize kurtosis from average signals
across all directions acquired for each data b-value (also known as
powder-averaged signals). Moreover, as previously pointed [NetoHe2015]_,
standard kurtosis measures (e.g. radial, axial and standard mean kurtosis)
do not only depend on microstructural properties but also on mesoscopic
properties such as fiber dispersion or the intersection angle of crossing
fibers. In contrary, the kurtosis from powder-average signals has the advantage
of not depending on the fiber distribution functions [NetoHe2018]_,
[NetoHe2019]_.

In short, in this tutorial we show how to characterize non-Gaussian diffusion
in a more precise way and decoupled from confounding effects of tissue
dispersion and crossing.

In the first part of this example, we illustrate the properties of the measures
obtained from the mean signal diffusion kurtosis imaging (MSDKI)[NetoHe2018]_
using synthetic data. Secondly, the mean signal diffusion kurtosis imaging will
be applied to in-vivo MRI data. Finally, we show how MSDKI provides the same
information than common microstructural models such as the spherical mean
technique [NetoHe2019]_, [Kaden2016b]_.

Let's import all relevant modules:

.. GENERATED FROM PYTHON SOURCE LINES 37-56

.. code-block:: default


    import numpy as np
    import matplotlib.pyplot as plt

    # Reconstruction modules
    import dipy.reconst.dki as dki
    import dipy.reconst.msdki as msdki

    # For simulations
    from dipy.sims.voxel import multi_tensor
    from dipy.core.gradients import gradient_table
    from dipy.core.sphere import disperse_charges, HemiSphere

    # For in-vivo data
    from dipy.data import get_fnames
    from dipy.io.gradients import read_bvals_bvecs
    from dipy.io.image import load_nifti
    from dipy.segment.mask import median_otsu








.. GENERATED FROM PYTHON SOURCE LINES 57-67

Testing MSDKI in synthetic data
===============================

We simulate representative diffusion-weighted signals using MultiTensor
simulations (for more information on this type of simulations see
:ref:`sphx_glr_examples_built_simulations_simulate_multi_tensor.py`). For this
example, simulations are produced based on the sum of four diffusion tensors
to represent the intra- and extra-cellular spaces of two fiber populations.
The parameters of these tensors are adjusted according to [NetoHe2015]_
(see also :ref:`sphx_glr_examples_built_simulations_simulate_dki.py`).

.. GENERATED FROM PYTHON SOURCE LINES 67-74

.. code-block:: default



    mevals = np.array([[0.00099, 0, 0],
                       [0.00226, 0.00087, 0.00087],
                       [0.00099, 0, 0],
                       [0.00226, 0.00087, 0.00087]])








.. GENERATED FROM PYTHON SOURCE LINES 75-79

For the acquisition parameters of the synthetic data, we use 60 gradient
directions for two non-zero b-values (1000 and 2000 $s/mm^{2}$) and two
zero bvalues (note that, such as the standard DKI, MSDKI requires at least
three different b-values).

.. GENERATED FROM PYTHON SOURCE LINES 79-100

.. code-block:: default



    # Sample the spherical coordinates of 60 random diffusion-weighted directions.
    n_pts = 60
    theta = np.pi * np.random.rand(n_pts)
    phi = 2 * np.pi * np.random.rand(n_pts)

    # Convert direction to cartesian coordinates.
    hsph_initial = HemiSphere(theta=theta, phi=phi)

    # Evenly distribute the 60 directions
    hsph_updated, potential = disperse_charges(hsph_initial, 5000)
    directions = hsph_updated.vertices

    # Reconstruct acquisition parameters for 2 non-zero=b-values and 2 b0s
    bvals = np.hstack((np.zeros(2), 1000 * np.ones(n_pts), 2000 * np.ones(n_pts)))
    bvecs = np.vstack((np.zeros((2, 3)), directions, directions))

    gtab = gradient_table(bvals, bvecs)









.. GENERATED FROM PYTHON SOURCE LINES 101-104

Simulations are looped for different intra- and extra-cellular water
volume fractions and different intersection angles of the two-fiber
populations.

.. GENERATED FROM PYTHON SOURCE LINES 104-128

.. code-block:: default



    # Array containing the intra-cellular volume fractions tested
    f = np.linspace(20, 80.0, num=7)

    # Array containing the intersection angle
    ang = np.linspace(0, 90.0, num=91)

    # Matrix where synthetic signals will be stored
    dwi = np.empty((f.size, ang.size, bvals.size))

    for f_i in range(f.size):
        # estimating volume fractions for individual tensors
        fractions = np.array([100 - f[f_i], f[f_i], 100 - f[f_i], f[f_i]]) * 0.5

        for a_i in range(ang.size):
            # defining the directions for individual tensors
            angles = [(ang[a_i], 0.0), (ang[a_i], 0.0), (0.0, 0.0), (0.0, 0.0)]

            # producing signals using Dipy's function multi_tensor
            signal, sticks = multi_tensor(gtab, mevals, S0=100, angles=angles,
                                          fractions=fractions, snr=None)
            dwi[f_i, a_i, :] = signal








.. GENERATED FROM PYTHON SOURCE LINES 129-134

Now that all synthetic signals were produced, we can go forward with
MSDKI fitting. As other Dipy's reconstruction techniques, the MSDKI model has
to be first defined for the specific GradientTable object of the synthetic
data. For MSDKI, this is done by instantiating the MeanDiffusionKurtosisModel
object in the following way:

.. GENERATED FROM PYTHON SOURCE LINES 134-138

.. code-block:: default



    msdki_model = msdki.MeanDiffusionKurtosisModel(gtab)








.. GENERATED FROM PYTHON SOURCE LINES 139-141

MSDKI can then be fitted to the synthetic data by calling the ``fit`` function
of this object:

.. GENERATED FROM PYTHON SOURCE LINES 141-145

.. code-block:: default



    msdki_fit = msdki_model.fit(dwi)








.. GENERATED FROM PYTHON SOURCE LINES 146-148

From the above fit object we can extract the two main parameters of the MSDKI,
i.e.: 1) the mean signal diffusion (MSD); and 2) the mean signal kurtosis (MSK)

.. GENERATED FROM PYTHON SOURCE LINES 148-153

.. code-block:: default



    MSD = msdki_fit.msd
    MSK = msdki_fit.msk








.. GENERATED FROM PYTHON SOURCE LINES 154-155

kurtosis (MK) from the standard DKI.

.. GENERATED FROM PYTHON SOURCE LINES 155-163

.. code-block:: default



    dki_model = dki.DiffusionKurtosisModel(gtab)
    dki_fit = dki_model.fit(dwi)

    MD = dki_fit.md
    MK = dki_fit.mk(0, 3)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

      0%|          | 0/637 [00:00<?, ?it/s]     35%|███▌      | 225/637 [00:00<00:00, 2248.54it/s]     71%|███████   | 450/637 [00:00<00:00, 2217.75it/s]    100%|██████████| 637/637 [00:00<00:00, 2185.90it/s]




.. GENERATED FROM PYTHON SOURCE LINES 164-166

Now we plot the results as a function of the ground truth intersection
angle and for different volume fractions of intra-cellular water.

.. GENERATED FROM PYTHON SOURCE LINES 166-195

.. code-block:: default



    fig1, axs = plt.subplots(nrows=2, ncols=2, figsize=(10, 10))

    for f_i in range(f.size):
        axs[0, 0].plot(ang, MSD[f_i], linewidth=1.0,
                       label='$F: %.2f$' % f[f_i])
        axs[0, 1].plot(ang, MSK[f_i], linewidth=1.0,
                       label='$F: %.2f$' % f[f_i])
        axs[1, 0].plot(ang, MD[f_i], linewidth=1.0,
                       label='$F: %.2f$' % f[f_i])
        axs[1, 1].plot(ang, MK[f_i], linewidth=1.0,
                       label='$F: %.2f$' % f[f_i])

    # Adjust properties of the first panel of the figure
    axs[0, 0].set_xlabel('Intersection angle')
    axs[0, 0].set_ylabel('MSD')
    axs[0, 1].set_xlabel('Intersection angle')
    axs[0, 1].set_ylabel('MSK')
    axs[0, 1].legend(loc='center left', bbox_to_anchor=(1, 0.5))
    axs[1, 0].set_xlabel('Intersection angle')
    axs[1, 0].set_ylabel('MD')
    axs[1, 1].set_xlabel('Intersection angle')
    axs[1, 1].set_ylabel('MK')
    axs[1, 1].legend(loc='center left', bbox_to_anchor=(1, 0.5))

    plt.show()
    fig1.savefig('MSDKI_simulations.png')




.. image-sg:: /examples_built/reconstruction/images/sphx_glr_reconst_msdki_001.png
   :alt: reconst msdki
   :srcset: /examples_built/reconstruction/images/sphx_glr_reconst_msdki_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 196-214

.. figure:: MSDKI_simulations.png
   :align: center

   MSDKI and DKI measures for data of two crossing synthetic fibers.
   Upper panels show the MSDKI measures: 1) mean signal diffusivity (left
   panel); and 2) mean signal kurtosis (right panel).
   For reference, lower panels show the measures obtained by standard DKI:
   1) mean diffusivity (left panel); and 2) mean kurtosis (right panel).
   All estimates are plotted as a function of the intersecting angle of the
   two crossing fibers. Different curves correspond to different ground truth
   axonal volume fraction of intra-cellular space.

The results of the above figure, demonstrate that both MSD and MSK are
sensitive to axonal volume fraction (i.e. a microstructure property) but are
independent to the intersection angle of the two crossing fibers (i.e.
independent to properties regarding fiber orientation). In contrast, DKI
measures seem to be independent to both axonal volume fraction and
intersection angle.

.. GENERATED FROM PYTHON SOURCE LINES 217-227

Reconstructing diffusion data using MSDKI
=========================================

Now that the properties of MSDKI were illustrated, let's apply MSDKI to in-vivo
diffusion-weighted data. As the example for the standard DKI
(see :ref:`sphx_glr_examples_built_reconstruction_reconst_dki.py`), we use fetch
to download a multi-shell dataset which was kindly provided by Hansen and
Jespersen (more details about the data are provided in their paper
[Hansen2016]_). The total size of the downloaded data is 192 MBytes, however
you only need to fetch it once.

.. GENERATED FROM PYTHON SOURCE LINES 227-235

.. code-block:: default



    fraw, fbval, fbvec, t1_fname = get_fnames('cfin_multib')

    data, affine = load_nifti(fraw)
    bvals, bvecs = read_bvals_bvecs(fbval, fbvec)
    gtab = gradient_table(bvals, bvecs)








.. GENERATED FROM PYTHON SOURCE LINES 236-243

Before fitting the data, we perform some data pre-processing. For illustration,
we only mask the data to avoid unnecessary calculations on the background of
the image; however, you could also apply other pre-processing techniques.
For example, some state of the art denoising algorithms are available in DIPY_
(e.g. the non-local means filter
:ref:`sphx_glr_examples_built_preprocessing_denoise_nlmeans.py` or the
local pca :ref:`sphx_glr_examples_built_preprocessing_denoise_localpca.py`).

.. GENERATED FROM PYTHON SOURCE LINES 243-248

.. code-block:: default



    maskdata, mask = median_otsu(data, vol_idx=[0, 1], median_radius=4, numpass=2,
                                 autocrop=False, dilate=1)








.. GENERATED FROM PYTHON SOURCE LINES 249-252

Now that we have loaded and pre-processed the data we can go forward
with MSDKI fitting. As for the synthetic data, the MSDKI model has to be first
defined for the data's GradientTable object:

.. GENERATED FROM PYTHON SOURCE LINES 252-256

.. code-block:: default



    msdki_model = msdki.MeanDiffusionKurtosisModel(gtab)








.. GENERATED FROM PYTHON SOURCE LINES 257-258

The data can then be fitted by calling the ``fit`` function of this object:

.. GENERATED FROM PYTHON SOURCE LINES 258-262

.. code-block:: default



    msdki_fit = msdki_model.fit(data, mask=mask)








.. GENERATED FROM PYTHON SOURCE LINES 263-265

Let's then extract the two main MSDKI's parameters: 1) mean signal diffusion
(MSD); and 2) mean signal kurtosis (MSK).

.. GENERATED FROM PYTHON SOURCE LINES 265-270

.. code-block:: default



    MSD = msdki_fit.msd
    MSK = msdki_fit.msk








.. GENERATED FROM PYTHON SOURCE LINES 271-273

For comparison, we calculate also the mean diffusivity (MD) and mean kurtosis
(MK) from the standard DKI.

.. GENERATED FROM PYTHON SOURCE LINES 273-282

.. code-block:: default



    dki_model = dki.DiffusionKurtosisModel(gtab)
    dki_fit = dki_model.fit(data, mask=mask)

    MD = dki_fit.md
    MK = dki_fit.mk(0, 3)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

      0%|          | 0/57580 [00:00<?, ?it/s]      0%|          | 56/57580 [00:00<01:44, 549.50it/s]      0%|          | 116/57580 [00:00<01:40, 573.47it/s]      0%|          | 178/57580 [00:00<01:36, 592.22it/s]      0%|          | 238/57580 [00:00<01:38, 581.47it/s]      1%|          | 300/57580 [00:00<01:36, 592.67it/s]      1%|          | 360/57580 [00:00<01:36, 591.84it/s]      1%|          | 421/57580 [00:00<01:35, 595.82it/s]      1%|          | 482/57580 [00:00<01:36, 589.84it/s]      1%|          | 542/57580 [00:00<01:37, 587.85it/s]      1%|          | 601/57580 [00:01<01:40, 569.24it/s]      1%|          | 659/57580 [00:01<01:40, 566.24it/s]      1%|          | 717/57580 [00:01<01:40, 568.32it/s]      1%|▏         | 778/57580 [00:01<01:38, 578.88it/s]      1%|▏         | 836/57580 [00:01<01:39, 571.52it/s]      2%|▏         | 894/57580 [00:01<01:41, 561.07it/s]      2%|▏         | 955/57580 [00:01<01:38, 573.90it/s]      2%|▏         | 1014/57580 [00:01<01:37, 578.02it/s]      2%|▏         | 1072/57580 [00:01<01:38, 572.70it/s]      2%|▏         | 1130/57580 [00:01<01:39, 565.85it/s]      2%|▏         | 1192/57580 [00:02<01:37, 579.03it/s]      2%|▏         | 1250/57580 [00:02<01:37, 577.48it/s]      2%|▏         | 1314/57580 [00:02<01:34, 592.89it/s]      2%|▏         | 1377/57580 [00:02<01:33, 603.12it/s]      2%|▏         | 1438/57580 [00:02<01:33, 601.46it/s]      3%|▎         | 1499/57580 [00:02<01:35, 589.21it/s]      3%|▎         | 1558/57580 [00:02<01:43, 541.79it/s]      3%|▎         | 1630/57580 [00:02<01:35, 588.79it/s]      3%|▎         | 1705/57580 [00:02<01:28, 633.87it/s]      3%|▎         | 1770/57580 [00:03<01:34, 593.18it/s]      3%|▎         | 1831/57580 [00:03<01:33, 593.20it/s]      3%|▎         | 1892/57580 [00:03<01:44, 534.67it/s]      3%|▎         | 1947/57580 [00:03<01:50, 505.59it/s]      3%|▎         | 2007/57580 [00:03<01:45, 528.32it/s]      4%|▎         | 2064/57580 [00:03<01:42, 539.47it/s]      4%|▎         | 2121/57580 [00:03<01:41, 545.78it/s]      4%|▍         | 2179/57580 [00:03<01:39, 554.63it/s]      4%|▍         | 2241/57580 [00:03<01:36, 572.99it/s]      4%|▍         | 2299/57580 [00:04<01:36, 572.91it/s]      4%|▍         | 2361/57580 [00:04<01:34, 584.67it/s]      4%|▍         | 2421/57580 [00:04<01:33, 588.75it/s]      4%|▍         | 2481/57580 [00:04<01:34, 584.70it/s]      4%|▍         | 2544/57580 [00:04<01:32, 596.80it/s]      5%|▍         | 2608/57580 [00:04<01:30, 609.45it/s]      5%|▍         | 2670/57580 [00:04<01:32, 596.02it/s]      5%|▍         | 2731/57580 [00:04<01:31, 598.32it/s]      5%|▍         | 2791/57580 [00:04<01:32, 591.40it/s]      5%|▍         | 2851/57580 [00:04<01:32, 592.56it/s]      5%|▌         | 2911/57580 [00:05<01:34, 577.16it/s]      5%|▌         | 2975/57580 [00:05<01:31, 593.95it/s]      5%|▌         | 3039/57580 [00:05<01:29, 606.72it/s]      5%|▌         | 3101/57580 [00:05<01:29, 608.28it/s]      5%|▌         | 3164/57580 [00:05<01:28, 611.95it/s]      6%|▌         | 3226/57580 [00:05<01:30, 601.09it/s]      6%|▌         | 3288/57580 [00:05<01:29, 606.15it/s]      6%|▌         | 3349/57580 [00:05<01:30, 599.76it/s]      6%|▌         | 3410/57580 [00:05<01:30, 598.43it/s]      6%|▌         | 3470/57580 [00:05<01:33, 579.99it/s]      6%|▌         | 3529/57580 [00:06<01:33, 577.51it/s]      6%|▌         | 3588/57580 [00:06<01:33, 580.45it/s]      6%|▋         | 3647/57580 [00:06<01:32, 582.80it/s]      6%|▋         | 3706/57580 [00:06<01:34, 570.00it/s]      7%|▋         | 3765/57580 [00:06<01:33, 574.15it/s]      7%|▋         | 3825/57580 [00:06<01:32, 580.73it/s]      7%|▋         | 3884/57580 [00:06<01:32, 578.24it/s]      7%|▋         | 3945/57580 [00:06<01:31, 585.61it/s]      7%|▋         | 4005/57580 [00:06<01:31, 587.56it/s]      7%|▋         | 4064/57580 [00:06<01:31, 585.54it/s]      7%|▋         | 4123/57580 [00:07<01:32, 580.88it/s]      7%|▋         | 4182/57580 [00:07<01:33, 572.68it/s]      7%|▋         | 4241/57580 [00:07<01:32, 575.81it/s]      7%|▋         | 4300/57580 [00:07<01:32, 578.46it/s]      8%|▊         | 4360/57580 [00:07<01:31, 582.53it/s]      8%|▊         | 4422/57580 [00:07<01:29, 593.29it/s]      8%|▊         | 4485/57580 [00:07<01:27, 603.47it/s]      8%|▊         | 4546/57580 [00:07<01:29, 589.43it/s]      8%|▊         | 4610/57580 [00:07<01:27, 603.85it/s]      8%|▊         | 4671/57580 [00:08<01:29, 593.14it/s]      8%|▊         | 4751/57580 [00:08<01:21, 651.86it/s]      8%|▊         | 4825/57580 [00:08<01:18, 676.19it/s]      8%|▊         | 4893/57580 [00:08<01:21, 645.77it/s]      9%|▊         | 4958/57580 [00:08<01:22, 638.24it/s]      9%|▊         | 5023/57580 [00:08<01:25, 615.87it/s]      9%|▉         | 5087/57580 [00:08<01:24, 621.29it/s]      9%|▉         | 5150/57580 [00:08<01:24, 620.49it/s]      9%|▉         | 5213/57580 [00:08<01:24, 619.67it/s]      9%|▉         | 5276/57580 [00:08<01:25, 610.53it/s]      9%|▉         | 5338/57580 [00:09<01:27, 598.98it/s]      9%|▉         | 5398/57580 [00:09<01:27, 597.03it/s]      9%|▉         | 5458/57580 [00:09<01:29, 582.93it/s]     10%|▉         | 5522/57580 [00:09<01:26, 599.27it/s]     10%|▉         | 5583/57580 [00:09<01:29, 583.72it/s]     10%|▉         | 5643/57580 [00:09<01:28, 586.94it/s]     10%|▉         | 5702/57580 [00:09<01:28, 587.08it/s]     10%|█         | 5764/57580 [00:09<01:26, 596.62it/s]     10%|█         | 5825/57580 [00:09<01:26, 598.15it/s]     10%|█         | 5885/57580 [00:10<01:27, 592.00it/s]     10%|█         | 5945/57580 [00:10<01:27, 593.32it/s]     10%|█         | 6005/57580 [00:10<01:26, 593.40it/s]     11%|█         | 6065/57580 [00:10<01:29, 577.70it/s]     11%|█         | 6123/57580 [00:10<01:29, 576.20it/s]     11%|█         | 6181/57580 [00:10<01:29, 574.06it/s]     11%|█         | 6243/57580 [00:10<01:27, 586.49it/s]     11%|█         | 6303/57580 [00:10<01:26, 589.91it/s]     11%|█         | 6366/57580 [00:10<01:25, 600.99it/s]     11%|█         | 6428/57580 [00:10<01:24, 603.29it/s]     11%|█▏        | 6489/57580 [00:11<01:27, 585.93it/s]     11%|█▏        | 6548/57580 [00:11<01:27, 581.03it/s]     11%|█▏        | 6610/57580 [00:11<01:26, 590.62it/s]     12%|█▏        | 6672/57580 [00:11<01:25, 596.40it/s]     12%|█▏        | 6732/57580 [00:11<01:25, 591.75it/s]     12%|█▏        | 6792/57580 [00:11<01:26, 587.97it/s]     12%|█▏        | 6852/57580 [00:11<01:25, 590.35it/s]     12%|█▏        | 6913/57580 [00:11<01:25, 595.61it/s]     12%|█▏        | 6976/57580 [00:11<01:23, 603.69it/s]     12%|█▏        | 7037/57580 [00:11<01:25, 591.38it/s]     12%|█▏        | 7099/57580 [00:12<01:24, 597.51it/s]     12%|█▏        | 7159/57580 [00:12<01:24, 594.28it/s]     13%|█▎        | 7219/57580 [00:12<01:25, 587.93it/s]     13%|█▎        | 7283/57580 [00:12<01:23, 600.72it/s]     13%|█▎        | 7345/57580 [00:12<01:23, 604.07it/s]     13%|█▎        | 7408/57580 [00:12<01:22, 611.57it/s]     13%|█▎        | 7471/57580 [00:12<01:21, 616.34it/s]     13%|█▎        | 7533/57580 [00:12<01:21, 615.69it/s]     13%|█▎        | 7595/57580 [00:12<01:22, 606.66it/s]     13%|█▎        | 7656/57580 [00:12<01:24, 587.57it/s]     13%|█▎        | 7715/57580 [00:13<01:24, 587.13it/s]     14%|█▎        | 7774/57580 [00:13<01:26, 572.71it/s]     14%|█▎        | 7835/57580 [00:13<01:25, 579.43it/s]     14%|█▎        | 7894/57580 [00:13<01:35, 518.36it/s]     14%|█▍        | 7961/57580 [00:13<01:28, 558.08it/s]     14%|█▍        | 8035/57580 [00:13<01:21, 606.08it/s]     14%|█▍        | 8097/57580 [00:13<01:22, 600.31it/s]     14%|█▍        | 8158/57580 [00:13<01:22, 600.53it/s]     14%|█▍        | 8219/57580 [00:13<01:24, 584.34it/s]     14%|█▍        | 8278/57580 [00:14<01:26, 569.68it/s]     14%|█▍        | 8342/57580 [00:14<01:23, 588.42it/s]     15%|█▍        | 8402/57580 [00:14<01:24, 582.88it/s]     15%|█▍        | 8463/57580 [00:14<01:23, 589.76it/s]     15%|█▍        | 8523/57580 [00:14<01:22, 591.18it/s]     15%|█▍        | 8583/57580 [00:14<01:22, 593.30it/s]     15%|█▌        | 8643/57580 [00:14<01:22, 592.28it/s]     15%|█▌        | 8703/57580 [00:14<01:23, 586.10it/s]     15%|█▌        | 8767/57580 [00:14<01:21, 601.55it/s]     15%|█▌        | 8828/57580 [00:15<01:22, 591.07it/s]     15%|█▌        | 8890/57580 [00:15<01:21, 597.17it/s]     16%|█▌        | 8950/57580 [00:15<01:22, 592.87it/s]     16%|█▌        | 9011/57580 [00:15<01:21, 596.84it/s]     16%|█▌        | 9071/57580 [00:15<01:21, 593.10it/s]     16%|█▌        | 9131/57580 [00:15<01:22, 587.73it/s]     16%|█▌        | 9191/57580 [00:15<01:22, 589.96it/s]     16%|█▌        | 9253/57580 [00:15<01:21, 594.64it/s]     16%|█▌        | 9313/57580 [00:15<01:22, 581.75it/s]     16%|█▋        | 9372/57580 [00:15<01:22, 583.84it/s]     16%|█▋        | 9431/57580 [00:16<01:26, 557.40it/s]     16%|█▋        | 9490/57580 [00:16<01:25, 565.41it/s]     17%|█▋        | 9547/57580 [00:16<01:24, 566.58it/s]     17%|█▋        | 9604/57580 [00:16<01:25, 562.79it/s]     17%|█▋        | 9666/57580 [00:16<01:22, 579.15it/s]     17%|█▋        | 9725/57580 [00:16<01:22, 576.85it/s]     17%|█▋        | 9785/57580 [00:16<01:22, 582.79it/s]     17%|█▋        | 9847/57580 [00:16<01:20, 592.53it/s]     17%|█▋        | 9908/57580 [00:16<01:19, 596.51it/s]     17%|█▋        | 9968/57580 [00:16<01:21, 580.77it/s]     17%|█▋        | 10028/57580 [00:17<01:21, 584.86it/s]     18%|█▊        | 10090/57580 [00:17<01:19, 594.56it/s]     18%|█▊        | 10151/57580 [00:17<01:19, 597.20it/s]     18%|█▊        | 10216/57580 [00:17<01:17, 611.69it/s]     18%|█▊        | 10278/57580 [00:17<01:19, 598.33it/s]     18%|█▊        | 10338/57580 [00:17<01:20, 585.94it/s]     18%|█▊        | 10398/57580 [00:17<01:20, 587.59it/s]     18%|█▊        | 10457/57580 [00:17<01:20, 582.80it/s]     18%|█▊        | 10517/57580 [00:17<01:20, 586.71it/s]     18%|█▊        | 10576/57580 [00:17<01:23, 565.54it/s]     18%|█▊        | 10633/57580 [00:18<01:25, 551.32it/s]     19%|█▊        | 10690/57580 [00:18<01:24, 555.14it/s]     19%|█▊        | 10746/57580 [00:18<01:24, 551.20it/s]     19%|█▉        | 10804/57580 [00:18<01:23, 557.03it/s]     19%|█▉        | 10864/57580 [00:18<01:22, 567.78it/s]     19%|█▉        | 10926/57580 [00:18<01:20, 580.51it/s]     19%|█▉        | 10985/57580 [00:18<01:21, 571.74it/s]     19%|█▉        | 11063/57580 [00:18<01:13, 630.79it/s]     19%|█▉        | 11142/57580 [00:18<01:08, 676.32it/s]     19%|█▉        | 11210/57580 [00:19<01:08, 676.02it/s]     20%|█▉        | 11278/57580 [00:19<01:11, 645.89it/s]     20%|█▉        | 11343/57580 [00:19<01:13, 627.25it/s]     20%|█▉        | 11408/57580 [00:19<01:13, 630.45it/s]     20%|█▉        | 11472/57580 [00:19<01:13, 628.11it/s]     20%|██        | 11535/57580 [00:19<01:17, 594.75it/s]     20%|██        | 11599/57580 [00:19<01:15, 606.79it/s]     20%|██        | 11661/57580 [00:19<01:16, 603.29it/s]     20%|██        | 11722/57580 [00:19<01:16, 596.87it/s]     20%|██        | 11782/57580 [00:19<01:19, 579.62it/s]     21%|██        | 11841/57580 [00:20<01:20, 568.74it/s]     21%|██        | 11900/57580 [00:20<01:19, 574.57it/s]     21%|██        | 11960/57580 [00:20<01:18, 580.45it/s]     21%|██        | 12021/57580 [00:20<01:17, 587.60it/s]     21%|██        | 12083/57580 [00:20<01:16, 594.33it/s]     21%|██        | 12146/57580 [00:20<01:15, 604.47it/s]     21%|██        | 12208/57580 [00:20<01:14, 606.66it/s]     21%|██▏       | 12269/57580 [00:20<01:15, 603.66it/s]     21%|██▏       | 12330/57580 [00:20<01:15, 598.61it/s]     22%|██▏       | 12390/57580 [00:21<01:19, 564.96it/s]     22%|██▏       | 12451/57580 [00:21<01:18, 577.44it/s]     22%|██▏       | 12513/57580 [00:21<01:16, 586.99it/s]     22%|██▏       | 12572/57580 [00:21<01:17, 584.09it/s]     22%|██▏       | 12631/57580 [00:21<01:20, 557.61it/s]     22%|██▏       | 12688/57580 [00:21<01:21, 550.25it/s]     22%|██▏       | 12753/57580 [00:21<01:17, 575.87it/s]     22%|██▏       | 12814/57580 [00:21<01:16, 582.20it/s]     22%|██▏       | 12875/57580 [00:21<01:16, 587.45it/s]     22%|██▏       | 12935/57580 [00:21<01:15, 587.59it/s]     23%|██▎       | 12996/57580 [00:22<01:15, 592.65it/s]     23%|██▎       | 13056/57580 [00:22<01:15, 589.73it/s]     23%|██▎       | 13116/57580 [00:22<01:15, 588.98it/s]     23%|██▎       | 13176/57580 [00:22<01:15, 590.45it/s]     23%|██▎       | 13240/57580 [00:22<01:13, 601.38it/s]     23%|██▎       | 13301/57580 [00:22<01:16, 575.71it/s]     23%|██▎       | 13363/57580 [00:22<01:15, 585.30it/s]     23%|██▎       | 13425/57580 [00:22<01:14, 594.04it/s]     23%|██▎       | 13485/57580 [00:22<01:14, 594.72it/s]     24%|██▎       | 13545/57580 [00:23<01:14, 589.31it/s]     24%|██▎       | 13606/57580 [00:23<01:13, 594.86it/s]     24%|██▎       | 13666/57580 [00:23<01:15, 580.48it/s]     24%|██▍       | 13725/57580 [00:23<01:15, 581.13it/s]     24%|██▍       | 13787/57580 [00:23<01:14, 591.59it/s]     24%|██▍       | 13847/57580 [00:23<01:14, 586.58it/s]     24%|██▍       | 13906/57580 [00:23<01:14, 584.75it/s]     24%|██▍       | 13968/57580 [00:23<01:13, 593.20it/s]     24%|██▍       | 14028/57580 [00:23<01:13, 590.42it/s]     24%|██▍       | 14088/57580 [00:23<01:16, 567.95it/s]     25%|██▍       | 14145/57580 [00:24<01:17, 563.04it/s]     25%|██▍       | 14202/57580 [00:24<01:19, 542.77it/s]     25%|██▍       | 14257/57580 [00:24<01:23, 519.29it/s]     25%|██▍       | 14319/57580 [00:24<01:19, 547.08it/s]     25%|██▍       | 14386/57580 [00:24<01:14, 579.31it/s]     25%|██▌       | 14449/57580 [00:24<01:12, 592.90it/s]     25%|██▌       | 14510/57580 [00:24<01:12, 595.61it/s]     25%|██▌       | 14571/57580 [00:24<01:11, 599.18it/s]     25%|██▌       | 14637/57580 [00:24<01:09, 615.42it/s]     26%|██▌       | 14699/57580 [00:24<01:11, 598.47it/s]     26%|██▌       | 14760/57580 [00:25<01:15, 564.19it/s]     26%|██▌       | 14818/57580 [00:25<01:15, 566.78it/s]     26%|██▌       | 14881/57580 [00:25<01:13, 581.59it/s]     26%|██▌       | 14940/57580 [00:25<01:13, 577.58it/s]     26%|██▌       | 14998/57580 [00:25<01:14, 575.07it/s]     26%|██▌       | 15059/57580 [00:25<01:13, 576.60it/s]     26%|██▋       | 15119/57580 [00:25<01:12, 583.26it/s]     26%|██▋       | 15180/57580 [00:25<01:11, 590.13it/s]     26%|██▋       | 15240/57580 [00:25<01:11, 590.52it/s]     27%|██▋       | 15300/57580 [00:26<01:15, 562.14it/s]     27%|██▋       | 15360/57580 [00:26<01:13, 571.53it/s]     27%|██▋       | 15418/57580 [00:26<01:14, 569.62it/s]     27%|██▋       | 15476/57580 [00:26<01:15, 554.13it/s]     27%|██▋       | 15539/57580 [00:26<01:13, 572.46it/s]     27%|██▋       | 15597/57580 [00:26<01:13, 568.26it/s]     27%|██▋       | 15658/57580 [00:26<01:12, 577.78it/s]     27%|██▋       | 15720/57580 [00:26<01:11, 587.91it/s]     27%|██▋       | 15780/57580 [00:26<01:10, 590.99it/s]     28%|██▊       | 15840/57580 [00:26<01:11, 580.23it/s]     28%|██▊       | 15901/57580 [00:27<01:10, 588.35it/s]     28%|██▊       | 15960/57580 [00:27<01:10, 586.52it/s]     28%|██▊       | 16021/57580 [00:27<01:10, 592.19it/s]     28%|██▊       | 16082/57580 [00:27<01:09, 596.86it/s]     28%|██▊       | 16142/57580 [00:27<01:09, 596.67it/s]     28%|██▊       | 16202/57580 [00:27<01:11, 579.52it/s]     28%|██▊       | 16261/57580 [00:27<01:11, 580.47it/s]     28%|██▊       | 16320/57580 [00:27<01:11, 577.83it/s]     28%|██▊       | 16378/57580 [00:27<01:11, 576.09it/s]     29%|██▊       | 16436/57580 [00:28<01:12, 564.92it/s]     29%|██▊       | 16496/57580 [00:28<01:11, 574.07it/s]     29%|██▊       | 16554/57580 [00:28<01:13, 556.72it/s]     29%|██▉       | 16610/57580 [00:28<01:13, 555.42it/s]     29%|██▉       | 16670/57580 [00:28<01:12, 566.74it/s]     29%|██▉       | 16729/57580 [00:28<01:11, 572.00it/s]     29%|██▉       | 16790/57580 [00:28<01:10, 582.58it/s]     29%|██▉       | 16852/57580 [00:28<01:08, 592.85it/s]     29%|██▉       | 16914/57580 [00:28<01:07, 599.24it/s]     29%|██▉       | 16977/57580 [00:28<01:06, 606.13it/s]     30%|██▉       | 17038/57580 [00:29<01:08, 593.31it/s]     30%|██▉       | 17098/57580 [00:29<01:08, 589.22it/s]     30%|██▉       | 17157/57580 [00:29<01:08, 586.16it/s]     30%|██▉       | 17223/57580 [00:29<01:06, 606.79it/s]     30%|███       | 17288/57580 [00:29<01:05, 616.22it/s]     30%|███       | 17352/57580 [00:29<01:04, 622.35it/s]     30%|███       | 17428/57580 [00:29<01:00, 663.15it/s]     30%|███       | 17506/57580 [00:29<00:57, 696.44it/s]     31%|███       | 17576/57580 [00:29<00:58, 684.37it/s]     31%|███       | 17645/57580 [00:29<01:02, 642.45it/s]     31%|███       | 17710/57580 [00:30<01:02, 635.77it/s]     31%|███       | 17774/57580 [00:30<01:03, 622.27it/s]     31%|███       | 17837/57580 [00:30<01:04, 617.51it/s]     31%|███       | 17899/57580 [00:30<01:05, 604.78it/s]     31%|███       | 17960/57580 [00:30<01:05, 603.80it/s]     31%|███▏      | 18021/57580 [00:30<01:05, 599.41it/s]     31%|███▏      | 18082/57580 [00:30<01:05, 601.33it/s]     32%|███▏      | 18143/57580 [00:30<01:06, 594.25it/s]     32%|███▏      | 18203/57580 [00:30<01:06, 594.79it/s]     32%|███▏      | 18263/57580 [00:31<01:09, 566.66it/s]     32%|███▏      | 18322/57580 [00:31<01:08, 569.67it/s]     32%|███▏      | 18382/57580 [00:31<01:07, 577.79it/s]     32%|███▏      | 18440/57580 [00:31<01:07, 575.73it/s]     32%|███▏      | 18498/57580 [00:31<01:10, 554.04it/s]     32%|███▏      | 18558/57580 [00:31<01:08, 565.88it/s]     32%|███▏      | 18623/57580 [00:31<01:06, 588.01it/s]     32%|███▏      | 18682/57580 [00:31<01:06, 584.31it/s]     33%|███▎      | 18741/57580 [00:31<01:06, 580.37it/s]     33%|███▎      | 18801/57580 [00:31<01:06, 584.46it/s]     33%|███▎      | 18862/57580 [00:32<01:05, 588.85it/s]     33%|███▎      | 18925/57580 [00:32<01:04, 598.35it/s]     33%|███▎      | 18985/57580 [00:32<01:05, 592.16it/s]     33%|███▎      | 19047/57580 [00:32<01:04, 600.07it/s]     33%|███▎      | 19109/57580 [00:32<01:03, 604.79it/s]     33%|███▎      | 19170/57580 [00:32<01:03, 603.14it/s]     33%|███▎      | 19231/57580 [00:32<01:03, 601.36it/s]     34%|███▎      | 19292/57580 [00:32<01:03, 603.60it/s]     34%|███▎      | 19353/57580 [00:32<01:03, 605.34it/s]     34%|███▎      | 19414/57580 [00:32<01:07, 568.08it/s]     34%|███▍      | 19473/57580 [00:33<01:06, 570.55it/s]     34%|███▍      | 19531/57580 [00:33<01:07, 566.17it/s]     34%|███▍      | 19588/57580 [00:33<01:17, 487.50it/s]     34%|███▍      | 19647/57580 [00:33<01:13, 514.29it/s]     34%|███▍      | 19703/57580 [00:33<01:12, 525.83it/s]     34%|███▍      | 19764/57580 [00:33<01:09, 547.59it/s]     34%|███▍      | 19827/57580 [00:33<01:06, 569.38it/s]     35%|███▍      | 19888/57580 [00:33<01:05, 579.48it/s]     35%|███▍      | 19947/57580 [00:33<01:05, 572.87it/s]     35%|███▍      | 20005/57580 [00:34<01:05, 570.48it/s]     35%|███▍      | 20065/57580 [00:34<01:04, 578.38it/s]     35%|███▍      | 20124/57580 [00:34<01:05, 572.03it/s]     35%|███▌      | 20186/57580 [00:34<01:03, 584.29it/s]     35%|███▌      | 20247/57580 [00:34<01:03, 590.87it/s]     35%|███▌      | 20309/57580 [00:34<01:02, 596.79it/s]     35%|███▌      | 20369/57580 [00:34<01:02, 593.15it/s]     35%|███▌      | 20429/57580 [00:34<01:02, 592.34it/s]     36%|███▌      | 20489/57580 [00:34<01:03, 588.09it/s]     36%|███▌      | 20561/57580 [00:34<00:59, 624.39it/s]     36%|███▌      | 20642/57580 [00:35<00:54, 678.09it/s]     36%|███▌      | 20716/57580 [00:35<00:53, 694.32it/s]     36%|███▌      | 20786/57580 [00:35<00:54, 669.22it/s]     36%|███▌      | 20854/57580 [00:35<00:58, 625.56it/s]     36%|███▋      | 20918/57580 [00:35<01:00, 609.30it/s]     36%|███▋      | 20980/57580 [00:35<01:00, 606.45it/s]     37%|███▋      | 21041/57580 [00:35<01:00, 607.00it/s]     37%|███▋      | 21103/57580 [00:35<01:00, 607.83it/s]     37%|███▋      | 21164/57580 [00:35<01:00, 600.60it/s]     37%|███▋      | 21225/57580 [00:36<01:02, 584.36it/s]     37%|███▋      | 21285/57580 [00:36<01:01, 586.43it/s]     37%|███▋      | 21348/57580 [00:36<01:00, 595.97it/s]     37%|███▋      | 21408/57580 [00:36<01:04, 557.02it/s]     37%|███▋      | 21466/57580 [00:36<01:04, 562.75it/s]     37%|███▋      | 21523/57580 [00:36<01:04, 556.75it/s]     37%|███▋      | 21584/57580 [00:36<01:03, 569.14it/s]     38%|███▊      | 21642/57580 [00:36<01:04, 560.60it/s]     38%|███▊      | 21699/57580 [00:36<01:12, 497.15it/s]     38%|███▊      | 21760/57580 [00:37<01:08, 526.58it/s]     38%|███▊      | 21822/57580 [00:37<01:04, 550.96it/s]     38%|███▊      | 21885/57580 [00:37<01:02, 572.30it/s]     38%|███▊      | 21945/57580 [00:37<01:01, 578.19it/s]     38%|███▊      | 22004/57580 [00:37<01:02, 573.65it/s]     38%|███▊      | 22062/57580 [00:37<01:02, 572.18it/s]     38%|███▊      | 22120/57580 [00:37<01:02, 571.62it/s]     39%|███▊      | 22181/57580 [00:37<01:00, 581.67it/s]     39%|███▊      | 22240/57580 [00:37<01:01, 578.96it/s]     39%|███▊      | 22299/57580 [00:38<01:07, 519.36it/s]     39%|███▉      | 22353/57580 [00:38<01:08, 514.27it/s]     39%|███▉      | 22414/57580 [00:38<01:05, 538.72it/s]     39%|███▉      | 22469/57580 [00:38<01:05, 538.43it/s]     39%|███▉      | 22529/57580 [00:38<01:03, 555.64it/s]     39%|███▉      | 22586/57580 [00:38<01:02, 555.60it/s]     39%|███▉      | 22648/57580 [00:38<01:01, 572.60it/s]     39%|███▉      | 22713/57580 [00:38<00:58, 593.23it/s]     40%|███▉      | 22773/57580 [00:38<00:58, 594.71it/s]     40%|███▉      | 22833/57580 [00:38<00:58, 596.00it/s]     40%|███▉      | 22893/57580 [00:39<00:58, 592.68it/s]     40%|███▉      | 22958/57580 [00:39<00:56, 609.29it/s]     40%|███▉      | 23020/57580 [00:39<00:58, 591.25it/s]     40%|████      | 23083/57580 [00:39<00:57, 600.38it/s]     40%|████      | 23145/57580 [00:39<00:56, 604.15it/s]     40%|████      | 23206/57580 [00:39<00:57, 597.45it/s]     40%|████      | 23266/57580 [00:39<00:57, 594.92it/s]     41%|████      | 23326/57580 [00:39<00:57, 594.42it/s]     41%|████      | 23386/57580 [00:39<00:57, 591.10it/s]     41%|████      | 23446/57580 [00:39<00:58, 580.90it/s]     41%|████      | 23505/57580 [00:40<00:58, 579.00it/s]     41%|████      | 23563/57580 [00:40<00:58, 578.73it/s]     41%|████      | 23621/57580 [00:40<01:00, 562.05it/s]     41%|████      | 23678/57580 [00:40<01:05, 519.11it/s]     41%|████▏     | 23756/57580 [00:40<00:57, 590.91it/s]     41%|████▏     | 23825/57580 [00:40<00:54, 618.90it/s]     41%|████▏     | 23888/57580 [00:40<00:54, 617.49it/s]     42%|████▏     | 23951/57580 [00:40<00:55, 605.59it/s]     42%|████▏     | 24013/57580 [00:40<00:55, 602.49it/s]     42%|████▏     | 24074/57580 [00:41<00:57, 579.99it/s]     42%|████▏     | 24139/57580 [00:41<00:55, 598.87it/s]     42%|████▏     | 24200/57580 [00:41<00:55, 597.29it/s]     42%|████▏     | 24260/57580 [00:41<00:56, 591.97it/s]     42%|████▏     | 24321/57580 [00:41<00:55, 595.53it/s]     42%|████▏     | 24381/57580 [00:41<00:57, 575.33it/s]     42%|████▏     | 24439/57580 [00:41<00:57, 571.53it/s]     43%|████▎     | 24501/57580 [00:41<00:56, 585.22it/s]     43%|████▎     | 24560/57580 [00:41<01:00, 546.09it/s]     43%|████▎     | 24616/57580 [00:41<01:00, 545.16it/s]     43%|████▎     | 24678/57580 [00:42<00:58, 564.23it/s]     43%|████▎     | 24737/57580 [00:42<00:57, 571.34it/s]     43%|████▎     | 24795/57580 [00:42<00:57, 570.13it/s]     43%|████▎     | 24860/57580 [00:42<00:55, 591.93it/s]     43%|████▎     | 24920/57580 [00:42<00:55, 591.30it/s]     43%|████▎     | 24981/57580 [00:42<00:54, 595.38it/s]     43%|████▎     | 25043/57580 [00:42<00:54, 600.45it/s]     44%|████▎     | 25104/57580 [00:42<00:54, 594.77it/s]     44%|████▎     | 25167/57580 [00:42<00:53, 603.07it/s]     44%|████▍     | 25228/57580 [00:43<00:54, 591.24it/s]     44%|████▍     | 25290/57580 [00:43<00:54, 596.83it/s]     44%|████▍     | 25350/57580 [00:43<00:55, 585.57it/s]     44%|████▍     | 25411/57580 [00:43<00:54, 590.67it/s]     44%|████▍     | 25471/57580 [00:43<00:57, 559.07it/s]     44%|████▍     | 25530/57580 [00:43<00:56, 566.59it/s]     44%|████▍     | 25589/57580 [00:43<00:55, 572.37it/s]     45%|████▍     | 25648/57580 [00:43<00:55, 574.73it/s]     45%|████▍     | 25710/57580 [00:43<00:54, 587.94it/s]     45%|████▍     | 25770/57580 [00:43<00:53, 591.36it/s]     45%|████▍     | 25830/57580 [00:44<00:54, 578.51it/s]     45%|████▍     | 25889/57580 [00:44<00:54, 580.93it/s]     45%|████▌     | 25948/57580 [00:44<00:54, 575.73it/s]     45%|████▌     | 26007/57580 [00:44<00:54, 579.67it/s]     45%|████▌     | 26071/57580 [00:44<00:52, 594.97it/s]     45%|████▌     | 26131/57580 [00:44<00:53, 589.16it/s]     45%|████▌     | 26190/57580 [00:44<00:53, 582.23it/s]     46%|████▌     | 26253/57580 [00:44<00:52, 594.04it/s]     46%|████▌     | 26314/57580 [00:44<00:52, 598.07it/s]     46%|████▌     | 26374/57580 [00:44<00:53, 580.49it/s]     46%|████▌     | 26437/57580 [00:45<00:52, 593.05it/s]     46%|████▌     | 26497/57580 [00:45<00:53, 585.37it/s]     46%|████▌     | 26560/57580 [00:45<00:52, 595.15it/s]     46%|████▌     | 26621/57580 [00:45<00:51, 597.21it/s]     46%|████▋     | 26683/57580 [00:45<00:51, 603.13it/s]     46%|████▋     | 26745/57580 [00:45<00:50, 606.08it/s]     47%|████▋     | 26806/57580 [00:45<00:51, 599.40it/s]     47%|████▋     | 26880/57580 [00:45<00:47, 640.63it/s]     47%|████▋     | 26957/57580 [00:45<00:45, 676.79it/s]     47%|████▋     | 27025/57580 [00:45<00:45, 668.94it/s]     47%|████▋     | 27092/57580 [00:46<00:47, 648.53it/s]     47%|████▋     | 27158/57580 [00:46<00:48, 630.80it/s]     47%|████▋     | 27222/57580 [00:46<00:49, 616.30it/s]     47%|████▋     | 27284/57580 [00:46<00:50, 594.45it/s]     47%|████▋     | 27344/57580 [00:46<00:51, 590.30it/s]     48%|████▊     | 27404/57580 [00:46<00:51, 583.44it/s]     48%|████▊     | 27466/57580 [00:46<00:50, 592.92it/s]     48%|████▊     | 27526/57580 [00:46<00:50, 593.02it/s]     48%|████▊     | 27586/57580 [00:46<00:51, 583.27it/s]     48%|████▊     | 27649/57580 [00:47<00:50, 596.23it/s]     48%|████▊     | 27709/57580 [00:47<00:50, 593.96it/s]     48%|████▊     | 27769/57580 [00:47<00:50, 595.57it/s]     48%|████▊     | 27832/57580 [00:47<00:49, 604.79it/s]     48%|████▊     | 27893/57580 [00:47<00:49, 604.99it/s]     49%|████▊     | 27954/57580 [00:47<00:49, 599.60it/s]     49%|████▊     | 28014/57580 [00:47<00:51, 578.22it/s]     49%|████▉     | 28073/57580 [00:47<00:50, 580.36it/s]     49%|████▉     | 28132/57580 [00:47<00:50, 579.12it/s]     49%|████▉     | 28190/57580 [00:47<00:52, 558.30it/s]     49%|████▉     | 28250/57580 [00:48<00:51, 569.95it/s]     49%|████▉     | 28308/57580 [00:48<00:51, 568.55it/s]     49%|████▉     | 28367/57580 [00:48<00:51, 567.01it/s]     49%|████▉     | 28424/57580 [00:48<00:52, 556.05it/s]     49%|████▉     | 28485/57580 [00:48<00:51, 570.46it/s]     50%|████▉     | 28547/57580 [00:48<00:49, 582.38it/s]     50%|████▉     | 28606/57580 [00:48<00:49, 583.81it/s]     50%|████▉     | 28670/57580 [00:48<00:48, 598.31it/s]     50%|████▉     | 28733/57580 [00:48<00:47, 605.88it/s]     50%|█████     | 28794/57580 [00:49<00:49, 576.73it/s]     50%|█████     | 28852/57580 [00:49<00:50, 572.57it/s]     50%|█████     | 28910/57580 [00:49<00:50, 567.90it/s]     50%|█████     | 28970/57580 [00:49<00:49, 576.25it/s]     50%|█████     | 29034/57580 [00:49<00:48, 594.56it/s]     51%|█████     | 29094/57580 [00:49<00:48, 589.25it/s]     51%|█████     | 29154/57580 [00:49<00:48, 583.31it/s]     51%|█████     | 29213/57580 [00:49<00:48, 579.68it/s]     51%|█████     | 29277/57580 [00:49<00:47, 595.40it/s]     51%|█████     | 29337/57580 [00:49<00:49, 574.62it/s]     51%|█████     | 29397/57580 [00:50<00:48, 581.84it/s]     51%|█████     | 29456/57580 [00:50<00:48, 582.39it/s]     51%|█████▏    | 29515/57580 [00:50<00:48, 581.07it/s]     51%|█████▏    | 29575/57580 [00:50<00:47, 585.03it/s]     51%|█████▏    | 29636/57580 [00:50<00:47, 591.21it/s]     52%|█████▏    | 29697/57580 [00:50<00:46, 593.64it/s]     52%|█████▏    | 29757/57580 [00:50<00:47, 588.54it/s]     52%|█████▏    | 29816/57580 [00:50<00:47, 579.54it/s]     52%|█████▏    | 29874/57580 [00:50<00:47, 578.83it/s]     52%|█████▏    | 29932/57580 [00:50<00:48, 574.34it/s]     52%|█████▏    | 29990/57580 [00:51<00:47, 575.11it/s]     52%|█████▏    | 30048/57580 [00:51<00:52, 527.64it/s]     52%|█████▏    | 30107/57580 [00:51<00:50, 544.91it/s]     52%|█████▏    | 30189/57580 [00:51<00:44, 621.30it/s]     53%|█████▎    | 30267/57580 [00:51<00:41, 665.30it/s]     53%|█████▎    | 30347/57580 [00:51<00:38, 704.09it/s]     53%|█████▎    | 30424/57580 [00:51<00:37, 721.43it/s]     53%|█████▎    | 30502/57580 [00:51<00:36, 737.29it/s]     53%|█████▎    | 30577/57580 [00:51<00:36, 732.59it/s]     53%|█████▎    | 30651/57580 [00:52<00:39, 682.44it/s]     53%|█████▎    | 30721/57580 [00:52<00:40, 658.53it/s]     53%|█████▎    | 30788/57580 [00:52<00:41, 639.67it/s]     54%|█████▎    | 30857/57580 [00:52<00:40, 652.32it/s]     54%|█████▎    | 30924/57580 [00:52<00:40, 655.90it/s]     54%|█████▍    | 30990/57580 [00:52<00:43, 613.74it/s]     54%|█████▍    | 31053/57580 [00:52<00:43, 604.40it/s]     54%|█████▍    | 31115/57580 [00:52<00:43, 607.72it/s]     54%|█████▍    | 31177/57580 [00:52<00:43, 605.25it/s]     54%|█████▍    | 31238/57580 [00:53<00:44, 594.08it/s]     54%|█████▍    | 31298/57580 [00:53<00:44, 591.81it/s]     54%|█████▍    | 31358/57580 [00:53<00:44, 590.02it/s]     55%|█████▍    | 31418/57580 [00:53<00:45, 580.52it/s]     55%|█████▍    | 31477/57580 [00:53<00:44, 581.88it/s]     55%|█████▍    | 31536/57580 [00:53<00:44, 581.67it/s]     55%|█████▍    | 31597/57580 [00:53<00:44, 587.64it/s]     55%|█████▍    | 31656/57580 [00:53<00:44, 583.91it/s]     55%|█████▌    | 31717/57580 [00:53<00:43, 590.43it/s]     55%|█████▌    | 31777/57580 [00:53<00:45, 566.34it/s]     55%|█████▌    | 31834/57580 [00:54<00:45, 563.34it/s]     55%|█████▌    | 31893/57580 [00:54<00:45, 569.17it/s]     55%|█████▌    | 31951/57580 [00:54<00:45, 560.14it/s]     56%|█████▌    | 32009/57580 [00:54<00:45, 565.40it/s]     56%|█████▌    | 32066/57580 [00:54<00:45, 562.59it/s]     56%|█████▌    | 32125/57580 [00:54<00:44, 569.17it/s]     56%|█████▌    | 32184/57580 [00:54<00:44, 574.31it/s]     56%|█████▌    | 32244/57580 [00:54<00:43, 580.72it/s]     56%|█████▌    | 32303/57580 [00:54<00:43, 583.01it/s]     56%|█████▌    | 32362/57580 [00:54<00:43, 575.37it/s]     56%|█████▋    | 32420/57580 [00:55<00:44, 570.55it/s]     56%|█████▋    | 32478/57580 [00:55<00:44, 569.71it/s]     57%|█████▋    | 32536/57580 [00:55<00:43, 571.93it/s]     57%|█████▋    | 32595/57580 [00:55<00:43, 577.06it/s]     57%|█████▋    | 32653/57580 [00:55<00:43, 576.94it/s]     57%|█████▋    | 32714/57580 [00:55<00:42, 585.16it/s]     57%|█████▋    | 32775/57580 [00:55<00:41, 591.37it/s]     57%|█████▋    | 32835/57580 [00:55<00:41, 590.78it/s]     57%|█████▋    | 32895/57580 [00:55<00:41, 592.98it/s]     57%|█████▋    | 32955/57580 [00:56<00:43, 571.33it/s]     57%|█████▋    | 33019/57580 [00:56<00:41, 589.84it/s]     57%|█████▋    | 33079/57580 [00:56<00:41, 592.53it/s]     58%|█████▊    | 33139/57580 [00:56<00:42, 579.73it/s]     58%|█████▊    | 33198/57580 [00:56<00:42, 575.60it/s]     58%|█████▊    | 33259/57580 [00:56<00:41, 585.32it/s]     58%|█████▊    | 33322/57580 [00:56<00:40, 596.43it/s]     58%|█████▊    | 33382/57580 [00:56<00:41, 589.31it/s]     58%|█████▊    | 33442/57580 [00:56<00:40, 590.31it/s]     58%|█████▊    | 33502/57580 [00:56<00:40, 588.16it/s]     58%|█████▊    | 33561/57580 [00:57<00:41, 582.09it/s]     58%|█████▊    | 33625/57580 [00:57<00:40, 597.28it/s]     59%|█████▊    | 33686/57580 [00:57<00:39, 597.88it/s]     59%|█████▊    | 33748/57580 [00:57<00:39, 603.66it/s]     59%|█████▊    | 33809/57580 [00:57<00:40, 589.93it/s]     59%|█████▉    | 33869/57580 [00:57<00:40, 578.81it/s]     59%|█████▉    | 33932/57580 [00:57<00:40, 590.63it/s]     59%|█████▉    | 34010/57580 [00:57<00:36, 644.95it/s]     59%|█████▉    | 34085/57580 [00:57<00:34, 674.33it/s]     59%|█████▉    | 34153/57580 [00:57<00:34, 670.07it/s]     59%|█████▉    | 34221/57580 [00:58<00:38, 609.44it/s]     60%|█████▉    | 34284/57580 [00:58<00:40, 581.08it/s]     60%|█████▉    | 34346/57580 [00:58<00:39, 590.87it/s]     60%|█████▉    | 34406/57580 [00:58<00:39, 583.08it/s]     60%|█████▉    | 34465/57580 [00:58<00:39, 584.07it/s]     60%|█████▉    | 34526/57580 [00:58<00:39, 590.10it/s]     60%|██████    | 34589/57580 [00:58<00:38, 600.62it/s]     60%|██████    | 34650/57580 [00:58<00:38, 597.07it/s]     60%|██████    | 34712/57580 [00:58<00:37, 603.67it/s]     60%|██████    | 34773/57580 [00:59<00:39, 584.31it/s]     60%|██████    | 34832/57580 [00:59<00:38, 583.63it/s]     61%|██████    | 34891/57580 [00:59<00:38, 583.12it/s]     61%|██████    | 34950/57580 [00:59<00:39, 577.51it/s]     61%|██████    | 35011/57580 [00:59<00:38, 586.89it/s]     61%|██████    | 35070/57580 [00:59<00:38, 586.92it/s]     61%|██████    | 35129/57580 [00:59<00:39, 568.37it/s]     61%|██████    | 35189/57580 [00:59<00:38, 576.68it/s]     61%|██████    | 35248/57580 [00:59<00:38, 579.26it/s]     61%|██████▏   | 35307/57580 [00:59<00:38, 575.00it/s]     61%|██████▏   | 35368/57580 [01:00<00:38, 583.73it/s]     62%|██████▏   | 35427/57580 [01:00<00:38, 571.68it/s]     62%|██████▏   | 35488/57580 [01:00<00:38, 580.23it/s]     62%|██████▏   | 35547/57580 [01:00<00:37, 582.93it/s]     62%|██████▏   | 35608/57580 [01:00<00:37, 588.12it/s]     62%|██████▏   | 35670/57580 [01:00<00:36, 594.69it/s]     62%|██████▏   | 35731/57580 [01:00<00:36, 592.42it/s]     62%|██████▏   | 35792/57580 [01:00<00:36, 597.38it/s]     62%|██████▏   | 35852/57580 [01:00<00:37, 585.99it/s]     62%|██████▏   | 35911/57580 [01:01<00:38, 556.88it/s]     62%|██████▏   | 35971/57580 [01:01<00:38, 568.06it/s]     63%|██████▎   | 36035/57580 [01:01<00:36, 588.73it/s]     63%|██████▎   | 36095/57580 [01:01<00:37, 575.76it/s]     63%|██████▎   | 36153/57580 [01:01<00:37, 576.73it/s]     63%|██████▎   | 36211/57580 [01:01<00:38, 559.60it/s]     63%|██████▎   | 36268/57580 [01:01<00:38, 556.06it/s]     63%|██████▎   | 36330/57580 [01:01<00:37, 571.52it/s]     63%|██████▎   | 36388/57580 [01:01<00:37, 572.66it/s]     63%|██████▎   | 36447/57580 [01:01<00:36, 577.73it/s]     63%|██████▎   | 36505/57580 [01:02<00:36, 575.23it/s]     64%|██████▎   | 36567/57580 [01:02<00:35, 586.06it/s]     64%|██████▎   | 36630/57580 [01:02<00:35, 596.54it/s]     64%|██████▎   | 36690/57580 [01:02<00:35, 582.55it/s]     64%|██████▍   | 36749/57580 [01:02<00:35, 578.92it/s]     64%|██████▍   | 36814/57580 [01:02<00:34, 598.43it/s]     64%|██████▍   | 36875/57580 [01:02<00:34, 600.21it/s]     64%|██████▍   | 36936/57580 [01:02<00:35, 589.61it/s]     64%|██████▍   | 36997/57580 [01:02<00:34, 594.19it/s]     64%|██████▍   | 37057/57580 [01:02<00:36, 563.68it/s]     64%|██████▍   | 37114/57580 [01:03<00:39, 523.95it/s]     65%|██████▍   | 37168/57580 [01:03<00:40, 504.40it/s]     65%|██████▍   | 37219/57580 [01:03<00:42, 483.42it/s]     65%|██████▍   | 37285/57580 [01:03<00:38, 530.21it/s]     65%|██████▍   | 37344/57580 [01:03<00:37, 546.82it/s]     65%|██████▍   | 37403/57580 [01:03<00:36, 558.41it/s]     65%|██████▌   | 37465/57580 [01:03<00:34, 575.67it/s]     65%|██████▌   | 37528/57580 [01:03<00:34, 589.49it/s]     65%|██████▌   | 37588/57580 [01:03<00:34, 586.97it/s]     65%|██████▌   | 37647/57580 [01:04<00:34, 584.67it/s]     65%|██████▌   | 37708/57580 [01:04<00:33, 589.99it/s]     66%|██████▌   | 37768/57580 [01:04<00:33, 590.73it/s]     66%|██████▌   | 37828/57580 [01:04<00:33, 589.34it/s]     66%|██████▌   | 37890/57580 [01:04<00:32, 598.06it/s]     66%|██████▌   | 37950/57580 [01:04<00:33, 593.34it/s]     66%|██████▌   | 38012/57580 [01:04<00:32, 599.03it/s]     66%|██████▌   | 38073/57580 [01:04<00:32, 602.27it/s]     66%|██████▌   | 38134/57580 [01:04<00:33, 588.65it/s]     66%|██████▋   | 38193/57580 [01:04<00:33, 580.19it/s]     66%|██████▋   | 38252/57580 [01:05<00:33, 574.00it/s]     67%|██████▋   | 38310/57580 [01:05<00:34, 556.31it/s]     67%|██████▋   | 38368/57580 [01:05<00:34, 561.35it/s]     67%|██████▋   | 38427/57580 [01:05<00:33, 568.73it/s]     67%|██████▋   | 38485/57580 [01:05<00:33, 570.31it/s]     67%|██████▋   | 38546/57580 [01:05<00:32, 580.16it/s]     67%|██████▋   | 38607/57580 [01:05<00:32, 586.41it/s]     67%|██████▋   | 38666/57580 [01:05<00:32, 587.01it/s]     67%|██████▋   | 38728/57580 [01:05<00:31, 594.15it/s]     67%|██████▋   | 38788/57580 [01:06<00:32, 574.76it/s]     67%|██████▋   | 38848/57580 [01:06<00:32, 579.21it/s]     68%|██████▊   | 38912/57580 [01:06<00:31, 595.38it/s]     68%|██████▊   | 38972/57580 [01:06<00:32, 579.95it/s]     68%|██████▊   | 39032/57580 [01:06<00:31, 583.10it/s]     68%|██████▊   | 39094/57580 [01:06<00:31, 592.82it/s]     68%|██████▊   | 39157/57580 [01:06<00:30, 602.32it/s]     68%|██████▊   | 39218/57580 [01:06<00:30, 601.28it/s]     68%|██████▊   | 39279/57580 [01:06<00:30, 603.61it/s]     68%|██████▊   | 39342/57580 [01:06<00:29, 610.45it/s]     68%|██████▊   | 39404/57580 [01:07<00:30, 596.19it/s]     69%|██████▊   | 39465/57580 [01:07<00:30, 600.19it/s]     69%|██████▊   | 39526/57580 [01:07<00:30, 599.91it/s]     69%|██████▉   | 39587/57580 [01:07<00:30, 598.54it/s]     69%|██████▉   | 39647/57580 [01:07<00:30, 592.68it/s]     69%|██████▉   | 39707/57580 [01:07<00:30, 590.46it/s]     69%|██████▉   | 39769/57580 [01:07<00:29, 598.86it/s]     69%|██████▉   | 39830/57580 [01:07<00:29, 602.05it/s]     69%|██████▉   | 39891/57580 [01:07<00:29, 600.05it/s]     69%|██████▉   | 39952/57580 [01:07<00:30, 570.89it/s]     69%|██████▉   | 40010/57580 [01:08<00:30, 570.88it/s]     70%|██████▉   | 40072/57580 [01:08<00:30, 582.75it/s]     70%|██████▉   | 40131/57580 [01:08<00:30, 575.85it/s]     70%|██████▉   | 40189/57580 [01:08<00:30, 564.44it/s]     70%|██████▉   | 40255/57580 [01:08<00:29, 590.57it/s]     70%|███████   | 40333/57580 [01:08<00:26, 645.79it/s]     70%|███████   | 40412/57580 [01:08<00:25, 686.42it/s]     70%|███████   | 40481/57580 [01:08<00:25, 677.21it/s]     70%|███████   | 40549/57580 [01:08<00:26, 654.42it/s]     71%|███████   | 40615/57580 [01:09<00:26, 628.94it/s]     71%|███████   | 40679/57580 [01:09<00:27, 624.41it/s]     71%|███████   | 40742/57580 [01:09<00:27, 608.35it/s]     71%|███████   | 40804/57580 [01:09<00:27, 605.72it/s]     71%|███████   | 40865/57580 [01:09<00:27, 602.14it/s]     71%|███████   | 40926/57580 [01:09<00:27, 601.42it/s]     71%|███████   | 40987/57580 [01:09<00:27, 600.42it/s]     71%|███████▏  | 41050/57580 [01:09<00:27, 607.41it/s]     71%|███████▏  | 41112/57580 [01:09<00:27, 609.87it/s]     72%|███████▏  | 41174/57580 [01:09<00:27, 588.46it/s]     72%|███████▏  | 41234/57580 [01:10<00:27, 588.50it/s]     72%|███████▏  | 41297/57580 [01:10<00:27, 599.92it/s]     72%|███████▏  | 41358/57580 [01:10<00:27, 583.33it/s]     72%|███████▏  | 41417/57580 [01:10<00:27, 582.26it/s]     72%|███████▏  | 41476/57580 [01:10<00:27, 580.31it/s]     72%|███████▏  | 41538/57580 [01:10<00:27, 590.92it/s]     72%|███████▏  | 41598/57580 [01:10<00:27, 588.34it/s]     72%|███████▏  | 41658/57580 [01:10<00:26, 590.61it/s]     72%|███████▏  | 41718/57580 [01:10<00:26, 593.34it/s]     73%|███████▎  | 41778/57580 [01:11<00:27, 571.03it/s]     73%|███████▎  | 41837/57580 [01:11<00:27, 575.82it/s]     73%|███████▎  | 41897/57580 [01:11<00:27, 580.14it/s]     73%|███████▎  | 41956/57580 [01:11<00:27, 565.69it/s]     73%|███████▎  | 42018/57580 [01:11<00:26, 580.06it/s]     73%|███████▎  | 42077/57580 [01:11<00:27, 572.49it/s]     73%|███████▎  | 42138/57580 [01:11<00:26, 580.58it/s]     73%|███████▎  | 42199/57580 [01:11<00:26, 587.06it/s]     73%|███████▎  | 42258/57580 [01:11<00:26, 586.91it/s]     73%|███████▎  | 42318/57580 [01:11<00:25, 589.36it/s]     74%|███████▎  | 42377/57580 [01:12<00:26, 569.76it/s]     74%|███████▎  | 42437/57580 [01:12<00:26, 576.79it/s]     74%|███████▍  | 42500/57580 [01:12<00:25, 590.49it/s]     74%|███████▍  | 42561/57580 [01:12<00:25, 595.43it/s]     74%|███████▍  | 42621/57580 [01:12<00:25, 594.52it/s]     74%|███████▍  | 42681/57580 [01:12<00:25, 586.49it/s]     74%|███████▍  | 42741/57580 [01:12<00:25, 587.65it/s]     74%|███████▍  | 42800/57580 [01:12<00:25, 585.20it/s]     74%|███████▍  | 42861/57580 [01:12<00:24, 592.02it/s]     75%|███████▍  | 42921/57580 [01:12<00:25, 566.12it/s]     75%|███████▍  | 42981/57580 [01:13<00:25, 572.64it/s]     75%|███████▍  | 43041/57580 [01:13<00:25, 579.65it/s]     75%|███████▍  | 43100/57580 [01:13<00:24, 581.23it/s]     75%|███████▍  | 43159/57580 [01:13<00:25, 565.05it/s]     75%|███████▌  | 43216/57580 [01:13<00:25, 564.83it/s]     75%|███████▌  | 43273/57580 [01:13<00:25, 565.70it/s]     75%|███████▌  | 43332/57580 [01:13<00:24, 570.27it/s]     75%|███████▌  | 43394/57580 [01:13<00:24, 581.59it/s]     75%|███████▌  | 43453/57580 [01:13<00:26, 536.73it/s]     76%|███████▌  | 43510/57580 [01:14<00:26, 538.82it/s]     76%|███████▌  | 43590/57580 [01:14<00:22, 611.28it/s]     76%|███████▌  | 43652/57580 [01:14<00:22, 607.85it/s]     76%|███████▌  | 43714/57580 [01:14<00:23, 599.62it/s]     76%|███████▌  | 43775/57580 [01:14<00:23, 596.09it/s]     76%|███████▌  | 43835/57580 [01:14<00:23, 588.56it/s]     76%|███████▌  | 43895/57580 [01:14<00:23, 583.12it/s]     76%|███████▋  | 43956/57580 [01:14<00:23, 589.43it/s]     76%|███████▋  | 44016/57580 [01:14<00:22, 591.58it/s]     77%|███████▋  | 44076/57580 [01:14<00:23, 587.03it/s]     77%|███████▋  | 44135/57580 [01:15<00:22, 586.95it/s]     77%|███████▋  | 44198/57580 [01:15<00:22, 598.56it/s]     77%|███████▋  | 44258/57580 [01:15<00:22, 588.90it/s]     77%|███████▋  | 44321/57580 [01:15<00:22, 599.44it/s]     77%|███████▋  | 44384/57580 [01:15<00:21, 608.11it/s]     77%|███████▋  | 44445/57580 [01:15<00:21, 597.46it/s]     77%|███████▋  | 44509/57580 [01:15<00:21, 608.10it/s]     77%|███████▋  | 44572/57580 [01:15<00:21, 613.93it/s]     78%|███████▊  | 44634/57580 [01:15<00:21, 602.45it/s]     78%|███████▊  | 44695/57580 [01:16<00:22, 570.61it/s]     78%|███████▊  | 44753/57580 [01:16<00:22, 573.18it/s]     78%|███████▊  | 44813/57580 [01:16<00:22, 576.83it/s]     78%|███████▊  | 44873/57580 [01:16<00:22, 575.76it/s]     78%|███████▊  | 44931/57580 [01:16<00:22, 571.79it/s]     78%|███████▊  | 44990/57580 [01:16<00:21, 576.74it/s]     78%|███████▊  | 45051/57580 [01:16<00:21, 583.46it/s]     78%|███████▊  | 45110/57580 [01:16<00:21, 585.26it/s]     78%|███████▊  | 45171/57580 [01:16<00:20, 591.35it/s]     79%|███████▊  | 45232/57580 [01:16<00:20, 595.25it/s]     79%|███████▊  | 45292/57580 [01:17<00:20, 589.38it/s]     79%|███████▉  | 45351/57580 [01:17<00:20, 587.98it/s]     79%|███████▉  | 45415/57580 [01:17<00:20, 599.84it/s]     79%|███████▉  | 45476/57580 [01:17<00:20, 600.43it/s]     79%|███████▉  | 45537/57580 [01:17<00:20, 586.39it/s]     79%|███████▉  | 45597/57580 [01:17<00:20, 587.58it/s]     79%|███████▉  | 45656/57580 [01:17<00:20, 583.55it/s]     79%|███████▉  | 45717/57580 [01:17<00:20, 590.63it/s]     80%|███████▉  | 45777/57580 [01:17<00:20, 586.71it/s]     80%|███████▉  | 45836/57580 [01:17<00:20, 569.54it/s]     80%|███████▉  | 45894/57580 [01:18<00:20, 564.66it/s]     80%|███████▉  | 45956/57580 [01:18<00:20, 579.65it/s]     80%|███████▉  | 46015/57580 [01:18<00:20, 574.11it/s]     80%|████████  | 46073/57580 [01:18<00:20, 571.17it/s]     80%|████████  | 46131/57580 [01:18<00:20, 554.11it/s]     80%|████████  | 46190/57580 [01:18<00:20, 563.18it/s]     80%|████████  | 46252/57580 [01:18<00:19, 577.81it/s]     80%|████████  | 46314/57580 [01:18<00:19, 587.90it/s]     81%|████████  | 46376/57580 [01:18<00:18, 596.61it/s]     81%|████████  | 46436/57580 [01:18<00:19, 581.57it/s]     81%|████████  | 46496/57580 [01:19<00:19, 583.28it/s]     81%|████████  | 46556/57580 [01:19<00:18, 587.18it/s]     81%|████████  | 46628/57580 [01:19<00:17, 626.11it/s]     81%|████████  | 46708/57580 [01:19<00:16, 676.38it/s]     81%|████████▏ | 46789/57580 [01:19<00:15, 714.16it/s]     81%|████████▏ | 46861/57580 [01:19<00:15, 672.97it/s]     82%|████████▏ | 46929/57580 [01:19<00:16, 654.04it/s]     82%|████████▏ | 46995/57580 [01:19<00:16, 635.14it/s]     82%|████████▏ | 47059/57580 [01:19<00:17, 615.70it/s]     82%|████████▏ | 47121/57580 [01:20<00:17, 601.16it/s]     82%|████████▏ | 47182/57580 [01:20<00:17, 595.64it/s]     82%|████████▏ | 47242/57580 [01:20<00:17, 578.49it/s]     82%|████████▏ | 47300/57580 [01:20<00:17, 572.59it/s]     82%|████████▏ | 47358/57580 [01:20<00:17, 570.10it/s]     82%|████████▏ | 47417/57580 [01:20<00:17, 574.58it/s]     82%|████████▏ | 47475/57580 [01:20<00:17, 571.98it/s]     83%|████████▎ | 47533/57580 [01:20<00:17, 571.86it/s]     83%|████████▎ | 47595/57580 [01:20<00:17, 584.80it/s]     83%|████████▎ | 47654/57580 [01:21<00:17, 570.32it/s]     83%|████████▎ | 47715/57580 [01:21<00:17, 579.53it/s]     83%|████████▎ | 47775/57580 [01:21<00:16, 583.33it/s]     83%|████████▎ | 47834/57580 [01:21<00:16, 584.86it/s]     83%|████████▎ | 47897/57580 [01:21<00:16, 596.64it/s]     83%|████████▎ | 47957/57580 [01:21<00:16, 591.10it/s]     83%|████████▎ | 48017/57580 [01:21<00:16, 593.38it/s]     83%|████████▎ | 48077/57580 [01:21<00:16, 589.73it/s]     84%|████████▎ | 48136/57580 [01:21<00:16, 582.43it/s]     84%|████████▎ | 48197/57580 [01:21<00:15, 586.93it/s]     84%|████████▍ | 48256/57580 [01:22<00:16, 568.28it/s]     84%|████████▍ | 48318/57580 [01:22<00:15, 581.25it/s]     84%|████████▍ | 48378/57580 [01:22<00:15, 585.26it/s]     84%|████████▍ | 48441/57580 [01:22<00:15, 595.25it/s]     84%|████████▍ | 48501/57580 [01:22<00:15, 569.81it/s]     84%|████████▍ | 48559/57580 [01:22<00:15, 566.22it/s]     84%|████████▍ | 48617/57580 [01:22<00:15, 568.65it/s]     85%|████████▍ | 48682/57580 [01:22<00:15, 589.49it/s]     85%|████████▍ | 48743/57580 [01:22<00:14, 592.67it/s]     85%|████████▍ | 48803/57580 [01:22<00:15, 582.70it/s]     85%|████████▍ | 48864/57580 [01:23<00:14, 588.96it/s]     85%|████████▍ | 48923/57580 [01:23<00:14, 587.63it/s]     85%|████████▌ | 48982/57580 [01:23<00:14, 579.46it/s]     85%|████████▌ | 49043/57580 [01:23<00:14, 588.01it/s]     85%|████████▌ | 49105/57580 [01:23<00:14, 597.09it/s]     85%|████████▌ | 49165/57580 [01:23<00:14, 597.40it/s]     85%|████████▌ | 49225/57580 [01:23<00:14, 593.35it/s]     86%|████████▌ | 49287/57580 [01:23<00:13, 600.34it/s]     86%|████████▌ | 49348/57580 [01:23<00:13, 598.64it/s]     86%|████████▌ | 49408/57580 [01:24<00:14, 546.34it/s]     86%|████████▌ | 49465/57580 [01:24<00:14, 551.51it/s]     86%|████████▌ | 49523/57580 [01:24<00:14, 558.73it/s]     86%|████████▌ | 49583/57580 [01:24<00:14, 569.24it/s]     86%|████████▌ | 49641/57580 [01:24<00:13, 569.25it/s]     86%|████████▋ | 49702/57580 [01:24<00:13, 579.23it/s]     86%|████████▋ | 49761/57580 [01:24<00:14, 543.44it/s]     87%|████████▋ | 49816/57580 [01:24<00:14, 536.47it/s]     87%|████████▋ | 49896/57580 [01:24<00:12, 609.26it/s]     87%|████████▋ | 49971/57580 [01:24<00:11, 639.04it/s]     87%|████████▋ | 50036/57580 [01:25<00:12, 611.17it/s]     87%|████████▋ | 50098/57580 [01:25<00:12, 606.72it/s]     87%|████████▋ | 50160/57580 [01:25<00:12, 602.06it/s]     87%|████████▋ | 50221/57580 [01:25<00:12, 602.93it/s]     87%|████████▋ | 50282/57580 [01:25<00:12, 583.51it/s]     87%|████████▋ | 50342/57580 [01:25<00:12, 584.65it/s]     88%|████████▊ | 50401/57580 [01:25<00:12, 583.92it/s]     88%|████████▊ | 50463/57580 [01:25<00:12, 591.59it/s]     88%|████████▊ | 50523/57580 [01:25<00:12, 586.07it/s]     88%|████████▊ | 50582/57580 [01:26<00:11, 586.88it/s]     88%|████████▊ | 50644/57580 [01:26<00:11, 594.67it/s]     88%|████████▊ | 50707/57580 [01:26<00:11, 601.34it/s]     88%|████████▊ | 50768/57580 [01:26<00:11, 601.07it/s]     88%|████████▊ | 50829/57580 [01:26<00:11, 594.61it/s]     88%|████████▊ | 50892/57580 [01:26<00:11, 602.81it/s]     88%|████████▊ | 50953/57580 [01:26<00:11, 595.29it/s]     89%|████████▊ | 51013/57580 [01:26<00:11, 584.45it/s]     89%|████████▊ | 51072/57580 [01:26<00:11, 579.24it/s]     89%|████████▉ | 51133/57580 [01:26<00:10, 586.15it/s]     89%|████████▉ | 51192/57580 [01:27<00:11, 575.95it/s]     89%|████████▉ | 51253/57580 [01:27<00:10, 583.40it/s]     89%|████████▉ | 51312/57580 [01:27<00:10, 583.88it/s]     89%|████████▉ | 51371/57580 [01:27<00:10, 571.56it/s]     89%|████████▉ | 51434/57580 [01:27<00:10, 587.56it/s]     89%|████████▉ | 51494/57580 [01:27<00:10, 590.16it/s]     90%|████████▉ | 51554/57580 [01:27<00:10, 592.85it/s]     90%|████████▉ | 51614/57580 [01:27<00:10, 582.56it/s]     90%|████████▉ | 51673/57580 [01:27<00:10, 579.55it/s]     90%|████████▉ | 51732/57580 [01:27<00:10, 577.87it/s]     90%|████████▉ | 51791/57580 [01:28<00:09, 579.05it/s]     90%|█████████ | 51850/57580 [01:28<00:09, 579.60it/s]     90%|█████████ | 51908/57580 [01:28<00:10, 558.41it/s]     90%|█████████ | 51966/57580 [01:28<00:09, 563.53it/s]     90%|█████████ | 52028/57580 [01:28<00:09, 578.15it/s]     90%|█████████ | 52087/57580 [01:28<00:09, 579.19it/s]     91%|█████████ | 52149/57580 [01:28<00:09, 588.53it/s]     91%|█████████ | 52210/57580 [01:28<00:09, 593.16it/s]     91%|█████████ | 52272/57580 [01:28<00:08, 597.64it/s]     91%|█████████ | 52332/57580 [01:29<00:09, 574.32it/s]     91%|█████████ | 52393/57580 [01:29<00:08, 582.46it/s]     91%|█████████ | 52453/57580 [01:29<00:08, 583.18it/s]     91%|█████████ | 52515/57580 [01:29<00:08, 591.82it/s]     91%|█████████▏| 52575/57580 [01:29<00:08, 593.41it/s]     91%|█████████▏| 52635/57580 [01:29<00:08, 579.14it/s]     92%|█████████▏| 52695/57580 [01:29<00:08, 585.03it/s]     92%|█████████▏| 52755/57580 [01:29<00:08, 588.00it/s]     92%|█████████▏| 52814/57580 [01:29<00:08, 585.24it/s]     92%|█████████▏| 52877/57580 [01:29<00:07, 596.07it/s]     92%|█████████▏| 52937/57580 [01:30<00:07, 587.55it/s]     92%|█████████▏| 53014/57580 [01:30<00:07, 639.22it/s]     92%|█████████▏| 53096/57580 [01:30<00:06, 691.02it/s]     92%|█████████▏| 53170/57580 [01:30<00:06, 704.22it/s]     92%|█████████▏| 53241/57580 [01:30<00:06, 655.46it/s]     93%|█████████▎| 53308/57580 [01:30<00:06, 627.95it/s]     93%|█████████▎| 53372/57580 [01:30<00:06, 618.22it/s]     93%|█████████▎| 53435/57580 [01:30<00:06, 613.58it/s]     93%|█████████▎| 53497/57580 [01:30<00:06, 608.91it/s]     93%|█████████▎| 53559/57580 [01:31<00:07, 522.49it/s]     93%|█████████▎| 53620/57580 [01:31<00:07, 543.66it/s]     93%|█████████▎| 53681/57580 [01:31<00:06, 561.49it/s]     93%|█████████▎| 53739/57580 [01:31<00:07, 541.54it/s]     93%|█████████▎| 53798/57580 [01:31<00:06, 553.17it/s]     94%|█████████▎| 53859/57580 [01:31<00:06, 567.94it/s]     94%|█████████▎| 53921/57580 [01:31<00:06, 580.57it/s]     94%|█████████▍| 53982/57580 [01:31<00:06, 588.01it/s]     94%|█████████▍| 54047/57580 [01:31<00:05, 605.04it/s]     94%|█████████▍| 54108/57580 [01:31<00:05, 597.51it/s]     94%|█████████▍| 54168/57580 [01:32<00:05, 583.97it/s]     94%|█████████▍| 54230/57580 [01:32<00:05, 593.10it/s]     94%|█████████▍| 54292/57580 [01:32<00:05, 599.71it/s]     94%|█████████▍| 54355/57580 [01:32<00:05, 605.22it/s]     95%|█████████▍| 54416/57580 [01:32<00:05, 587.61it/s]     95%|█████████▍| 54475/57580 [01:32<00:05, 584.72it/s]     95%|█████████▍| 54536/57580 [01:32<00:05, 590.18it/s]     95%|█████████▍| 54600/57580 [01:32<00:04, 603.62it/s]     95%|█████████▍| 54661/57580 [01:32<00:04, 598.69it/s]     95%|█████████▌| 54721/57580 [01:33<00:04, 591.14it/s]     95%|█████████▌| 54781/57580 [01:33<00:04, 587.07it/s]     95%|█████████▌| 54840/57580 [01:33<00:04, 586.13it/s]     95%|█████████▌| 54899/57580 [01:33<00:05, 501.53it/s]     95%|█████████▌| 54959/57580 [01:33<00:04, 526.36it/s]     96%|█████████▌| 55018/57580 [01:33<00:04, 543.58it/s]     96%|█████████▌| 55078/57580 [01:33<00:04, 557.73it/s]     96%|█████████▌| 55139/57580 [01:33<00:04, 571.38it/s]     96%|█████████▌| 55200/57580 [01:33<00:04, 580.50it/s]     96%|█████████▌| 55259/57580 [01:33<00:04, 565.23it/s]     96%|█████████▌| 55320/57580 [01:34<00:03, 576.87it/s]     96%|█████████▌| 55382/57580 [01:34<00:03, 586.50it/s]     96%|█████████▋| 55441/57580 [01:34<00:03, 568.38it/s]     96%|█████████▋| 55501/57580 [01:34<00:03, 576.74it/s]     96%|█████████▋| 55559/57580 [01:34<00:03, 567.17it/s]     97%|█████████▋| 55618/57580 [01:34<00:03, 572.84it/s]     97%|█████████▋| 55684/57580 [01:34<00:03, 597.06it/s]     97%|█████████▋| 55748/57580 [01:34<00:03, 607.18it/s]     97%|█████████▋| 55813/57580 [01:34<00:02, 618.81it/s]     97%|█████████▋| 55875/57580 [01:35<00:02, 600.31it/s]     97%|█████████▋| 55938/57580 [01:35<00:02, 606.11it/s]     97%|█████████▋| 55999/57580 [01:35<00:02, 600.40it/s]     97%|█████████▋| 56060/57580 [01:35<00:02, 594.30it/s]     97%|█████████▋| 56120/57580 [01:35<00:02, 535.08it/s]     98%|█████████▊| 56187/57580 [01:35<00:02, 571.37it/s]     98%|█████████▊| 56259/57580 [01:35<00:02, 611.96it/s]     98%|█████████▊| 56329/57580 [01:35<00:01, 636.18it/s]     98%|█████████▊| 56394/57580 [01:35<00:01, 614.36it/s]     98%|█████████▊| 56457/57580 [01:36<00:01, 586.45it/s]     98%|█████████▊| 56517/57580 [01:36<00:01, 585.58it/s]     98%|█████████▊| 56577/57580 [01:36<00:01, 588.17it/s]     98%|█████████▊| 56637/57580 [01:36<00:01, 585.87it/s]     98%|█████████▊| 56696/57580 [01:36<00:01, 585.37it/s]     99%|█████████▊| 56755/57580 [01:36<00:01, 575.21it/s]     99%|█████████▊| 56816/57580 [01:36<00:01, 583.38it/s]     99%|█████████▉| 56876/57580 [01:36<00:01, 585.40it/s]     99%|█████████▉| 56939/57580 [01:36<00:01, 597.40it/s]     99%|█████████▉| 57001/57580 [01:36<00:00, 601.67it/s]     99%|█████████▉| 57062/57580 [01:37<00:00, 594.17it/s]     99%|█████████▉| 57126/57580 [01:37<00:00, 606.70it/s]     99%|█████████▉| 57187/57580 [01:37<00:00, 604.32it/s]     99%|█████████▉| 57250/57580 [01:37<00:00, 609.75it/s]    100%|█████████▉| 57314/57580 [01:37<00:00, 614.24it/s]    100%|█████████▉| 57376/57580 [01:37<00:00, 615.02it/s]    100%|█████████▉| 57438/57580 [01:37<00:00, 602.95it/s]    100%|█████████▉| 57499/57580 [01:37<00:00, 592.56it/s]    100%|█████████▉| 57559/57580 [01:37<00:00, 592.58it/s]    100%|██████████| 57580/57580 [01:37<00:00, 588.18it/s]




.. GENERATED FROM PYTHON SOURCE LINES 283-284

Let's now visualize the data using matplotlib for a selected axial slice.

.. GENERATED FROM PYTHON SOURCE LINES 284-317

.. code-block:: default



    axial_slice = 9

    fig2, ax = plt.subplots(2, 2, figsize=(6, 6),
                            subplot_kw={'xticks': [], 'yticks': []})

    fig2.subplots_adjust(hspace=0.3, wspace=0.05)

    im0 = ax.flat[0].imshow(MSD[:, :, axial_slice].T * 1000, cmap='gray',
                            vmin=0, vmax=2, origin='lower')
    ax.flat[0].set_title('MSD (MSDKI)')

    im1 = ax.flat[1].imshow(MSK[:, :, axial_slice].T, cmap='gray',
                            vmin=0, vmax=2, origin='lower')
    ax.flat[1].set_title('MSK (MSDKI)')

    im2 = ax.flat[2].imshow(MD[:, :, axial_slice].T * 1000, cmap='gray',
                            vmin=0, vmax=2, origin='lower')
    ax.flat[2].set_title('MD (DKI)')

    im3 = ax.flat[3].imshow(MK[:, :, axial_slice].T, cmap='gray',
                            vmin=0, vmax=2, origin='lower')
    ax.flat[3].set_title('MK (DKI)')

    fig2.colorbar(im0, ax=ax.flat[0])
    fig2.colorbar(im1, ax=ax.flat[1])
    fig2.colorbar(im2, ax=ax.flat[2])
    fig2.colorbar(im3, ax=ax.flat[3])

    plt.show()
    fig2.savefig('MSDKI_invivo.png')




.. image-sg:: /examples_built/reconstruction/images/sphx_glr_reconst_msdki_002.png
   :alt: reconst msdki
   :srcset: /examples_built/reconstruction/images/sphx_glr_reconst_msdki_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 318-340

.. figure::MSDKI_invivo.png
   :align: center

   MSDKI measures (upper panels) and DKI standard measures (lower panels).

This figure shows that the contrast of in-vivo MSD and MSK maps (upper panels)
are similar to the contrast of MD and MSK maps (lower panels); however, in the
upper part we insure that direct contributions of fiber dispersion were
removed. The upper panels also reveal that MSDKI measures are let sensitive
to noise artefacts than standard DKI measures (as pointed by [NetoHe2018]_),
particularly one can observe that MSK maps always present positive values
in brain white matter regions, while implausible negative kurtosis values are
present in the MK maps in the same regions.

Relationship between MSDKI and SMT2
===================================
As showed in [NetoHe2019]_, MSDKI captures the same information than the
spherical mean technique (SMT) microstructural models [Kaden2016b]_. In this
way, the SMT model parameters can be directly computed from MSDKI.
For instance, the axonal volume fraction (f), the intrisic diffusivity (di),
and the microscopic anisotropy of the SMT 2-compartmental model [NetoHe2019]_
can be extracted using the following lines of code:

.. GENERATED FROM PYTHON SOURCE LINES 340-346

.. code-block:: default



    F = msdki_fit.smt2f
    DI = msdki_fit.smt2di
    uFA2 = msdki_fit.smt2uFA








.. GENERATED FROM PYTHON SOURCE LINES 347-374

.. code-block:: default



    fig3, ax = plt.subplots(1, 3, figsize=(9, 2.5),
                            subplot_kw={'xticks': [], 'yticks': []})

    fig3.subplots_adjust(hspace=0.4, wspace=0.1)

    im0 = ax.flat[0].imshow(F[:, :, axial_slice].T,
                            cmap='gray', vmin=0, vmax=1, origin='lower')
    ax.flat[0].set_title('SMT2 f (MSDKI)')

    im1 = ax.flat[1].imshow(DI[:, :, axial_slice].T * 1000, cmap='gray',
                            vmin=0, vmax=2, origin='lower')
    ax.flat[1].set_title('SMT2 di (MSDKI)')

    im2 = ax.flat[2].imshow(uFA2[:, :, axial_slice].T, cmap='gray',
                            vmin=0, vmax=1, origin='lower')
    ax.flat[2].set_title('SMT2 uFA (MSDKI)')

    fig3.colorbar(im0, ax=ax.flat[0])
    fig3.colorbar(im1, ax=ax.flat[1])
    fig3.colorbar(im2, ax=ax.flat[2])


    plt.show()
    fig3.savefig('MSDKI_SMT2_invivo.png')




.. image-sg:: /examples_built/reconstruction/images/sphx_glr_reconst_msdki_003.png
   :alt: reconst msdki
   :srcset: /examples_built/reconstruction/images/sphx_glr_reconst_msdki_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 375-420

.. figure::MSDKI_SMT2_invivo.png
   :align: center

   SMT2 model quantities extracted from MSDKI. From left to right, the figure
   shows the axonal volume fraction (f), the intrinsic diffusivity (di), and
   the microscopic anisotropy of the SMT 2-compartmental model [NetoHe2019]_.

The similar contrast of SMT2 f-parameter maps in comparison to MSK (first panel
of Figure 3 vs second panel of Figure 2) confirms than MSK and F captures the
same tissue information but on different scales (but rescaled to values between
0 and 1).  It is important to note that SMT model parameters estimates should
be used with care, because the SMT model was shown to be invalid NetoHe2019]_.
For instance, although SMT2 parameter f and uFA may be a useful normalization
of the degree of non-Gaussian diffusion (note than both metrics have a range
between 0 and 1), these cannot be interpreted as a real biophysical estimates
of axonal water fraction and tissue microscopic anisotropy.


References
----------
.. [Jensen2005] Jensen JH, Helpern JA, Ramani A, Lu H, Kaczynski K (2005).
                Diffusional Kurtosis Imaging: The Quantification of
                Non_Gaussian Water Diffusion by Means of Magnetic Resonance
                Imaging. Magnetic Resonance in Medicine 53: 1432-1440
.. [NetoHe2015] Neto Henriques R, Correia MM, Nunes RG, Ferreira HA (2015).
                Exploring the 3D geometry of the diffusion kurtosis tensor -
                Impact on the development of robust tractography procedures and
                novel biomarkers, NeuroImage 111: 85-99
.. [NetoHe2018] Henriques RN, 2018. Advanced Methods for Diffusion MRI Data
                Analysis and their Application to the Healthy Ageing Brain
                (Doctoral thesis). Downing College, University of Cambridge.
                https://doi.org/10.17863/CAM.29356
.. [NetoHe2019] Neto Henriques R, Jespersen SN, Shemesh N (2019). Microscopic
                anisotropy misestimation in spherical‐mean single diffusion
                encoding MRI. Magnetic Resonance in Medicine (In press).
                doi: 10.1002/mrm.27606
.. [Kaden2016b] Kaden E, Kelm ND, Carson RP, Does MD, Alexander DC (2016)
                Multi-compartment microscopic diffusion imaging. NeuroImage
                139: 346-359.
.. [Hansen2016] Hansen, B, Jespersen, SN (2016). Data for evaluation of fast
                kurtosis strategies, b-value optimization and exploration of
                diffusion MRI contrast. Scientific Data 3: 160072
                doi:10.1038/sdata.2016.72

.. include:: ../links_names.inc

.. GENERATED FROM PYTHON SOURCE LINES 422-424

.. include:: ../../links_names.inc



.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (5 minutes 17.964 seconds)


.. _sphx_glr_download_examples_built_reconstruction_reconst_msdki.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: reconst_msdki.py <reconst_msdki.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: reconst_msdki.ipynb <reconst_msdki.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
